# Customer-Demand-Forecasting-Inventory-Optimization-System

./: .coverage  .gitignore  .trivyignore  Dockerfile  Makefile  README.md  commands.txt  docker-compose.integration.yml  docker-compose.yml  project_structure.txt  pyproject.toml  requirements-resolved.txt  requirements-uv.txt  requirements.txt  run_local.py  test_source.py
.github/workflows/: cd.yml  ci.yml  complete_mlops_pipeline.yaml  tests.yml
configs/: config.yaml
demand_forecasting.egg-info/: SOURCES.txt  requires.txt
deployments/docker/: Dockerfile.api  Dockerfile.trainer
deployments/kubernetes/: model_serving.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml  servicemonitor.yaml
models/test_run_id/: encoders.pkl  features.json  model.pkl
requirements/: requirements-base.txt  requirements-bigdata.txt  requirements-dl.txt  requirements-ml.txt  requirements-mlops.txt  requirements-ray.txt
scripts/: verify_business_requirements.py  verify_data_collection.py  verify_features.py  verify_inference.py  verify_model_training.py  verify_validator.py  wait_for_services.sh
src/business/: __init__.py  requirements.py
src/data/: collectors.py  validators.py
src/data_lake/: data_lake_manager.py
src/data_sources/: huggingface_source.py
src/demand_forecasting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/evaluation/: model_evaluation.py
src/feature_store/: feature_store.py
src/features/: __init__.py  engineering.py  store.py
src/ingestion/: kafka_streaming.py
src/mlflow_registry/: model_registry.py
src/models/: inference.py  trainer.py
src/preprocessing/: preprocessing_pipeline.py
src/serving/: api.py  auth.py  dependencies.py  rate_limiter.py
src/training/: training_pipeline.py
src/validation/: data_validation.py
tests/: test_imports.py
tests/integration/: conftest.py  test_api_integration.py
tests/unit/: test_auth.py  test_business_requirements.py  test_data_collectors.py  test_dependencies.py  test_feature_store.py  test_features.py  test_inference.py  test_models.py  test_rate_limiter.py  test_serving_api.py  test_validator.py  test_validator.py.bak
