[project]
name = "demand-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "bcrypt",
    "fastapi",
    "httpx",
    "PyJWT",
    "mlflow",
    "numpy",
    "pandas",
    "prometheus-client",
    "pydantic",
    "pydantic-settings",
    "ray",
    "redis",
    "scikit-learn",
    "structlog",
    "tenacity",
    "xgboost",
    "uvicorn[standard]",
    "python-dotenv",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "ruff",
    "black",
    "isort",
    "mypy",
    "bandit",
    "pre-commit",
]

aws = ["boto3"]
kafka = ["confluent-kafka"]
feast = ["feast", "pyarrow"]
monitoring = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
]

all = [
    "boto3",
    "confluent-kafka",
    "feast",
    "pyarrow",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
]

[build-system]
requires = ["uv>=0.1.0", "setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
