[project]
name = "customer-demand-forecasting"
version = "0.1.0"
description = "Production-grade MLOps platform for customer demand forecasting"
readme = "README.md"
requires-python = ">=3.12, <3.13"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp",
    "bcrypt",
    "fastapi",
    "httpx",
    "PyJWT",
    "mlflow",
    "numpy",
    "pandas",
    "prometheus-client",
    "pydantic",
    "pydantic-settings",
    "ray",
    "redis",
    "scikit-learn",
    "structlog",
    "tenacity",
    "xgboost",
    "uvicorn[standard]",
    "python-dotenv",
    "pyyaml",
    "boto3>=1.43.44",
    "confluent-kafka>=2.15.0",
    "datasets>=5.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "pre-commit>=3.3.0",
]

aws = ["boto3>=1.34.0"]
kafka = ["confluent-kafka>=2.0.0"]
feast = ["feast>=0.34.0", "pyarrow>=14.0.0"]
monitoring = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]

all = [
    "boto3>=1.34.0",
    "confluent-kafka>=2.0.0",
    "feast>=0.34.0",
    "pyarrow>=14.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]

[build-system]
requires = ["uv>=0.1.0", "setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "boto3>=1.43.44",
    "confluent-kafka>=2.15.0",
    "datasets>=5.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.1.0",
]
override-dependencies = [
    "nvidia-nccl-cu12; sys_platform == 'never'",
    "protobuf>=5.29.6",
]
# Only torch/torchvision/torchaudio are pinned to the CPU-only PyTorch index.
# Everything else keeps resolving from PyPI as normal — this avoids the risk
# of unrelated packages breaking because they don't exist on the PyTorch index.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
allow_untyped_defs = false
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term --cov-report=html"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "asyncio: Async tests",
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]

[tool.bandit]
exclude_dirs = ["tests", "docs", ".venv"]
skips = ["B101", "B311", "B324"]